bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "abseil-cpp", version = "20260107.0", repo_name = "absl")
bazel_dep(name = "gflags", version = "2.2.2.bcr.1")
bazel_dep(name = "glog", version = "0.7.1.bcr.1")
