cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "dutch",
    srcs = ["dutch.cc"],
    hdrs = ["dutch.h"],
    deps = [],
)

cc_test(
    name = "dutch_test",
    srcs = ["dutch_test.cc"],
    deps = [
        ":dutch",
        "@absl//absl/strings:str_format",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "delete_dups",
    srcs = ["delete_dups.cc"],
    hdrs = ["delete_dups.h"],
    deps = [],
)

cc_test(
    name = "delete_dups_test",
    srcs = ["delete_dups_test.cc"],
    deps = [
        ":delete_dups",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "plus_one",
    srcs = ["plus_one.cc"],
    hdrs = ["plus_one.h"],
    deps = [],
)

cc_test(
    name = "plus_one_test",
    srcs = ["plus_one_test.cc"],
    deps = [
        ":plus_one",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "spiral",
    srcs = ["spiral.cc"],
    hdrs = ["spiral.h"],
    deps = [],
)

cc_test(
    name = "spiral_test",
    srcs = ["spiral_test.cc"],
    deps = [
        ":spiral",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "primes",
    srcs = ["primes.cc"],
    hdrs = ["primes.h"],
    deps = [],
)

cc_test(
    name = "primes_test",
    srcs = ["primes_test.cc"],
    deps = [
        ":primes",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "diagonal",
    srcs = ["diagonal.cc"],
    hdrs = ["diagonal.h"],
    deps = [],
)

cc_test(
    name = "diagonal_test",
    srcs = ["diagonal_test.cc"],
    deps = [
        ":diagonal",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "buy_sell_once",
    srcs = ["buy_sell_once.cc"],
    hdrs = ["buy_sell_once.h"],
    deps = [],
)

cc_test(
    name = "buy_sell_once_test",
    srcs = ["buy_sell_once_test.cc"],
    deps = [
        ":buy_sell_once",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "max_subarray",
    srcs = ["max_subarray.cc"],
    hdrs = ["max_subarray.h"],
    deps = ["@absl//absl/strings:str_format"],
)

cc_test(
    name = "max_subarray_test",
    srcs = ["max_subarray_test.cc"],
    deps = [
        ":max_subarray",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "segment",
    srcs = ["segment.cc"],
    hdrs = ["segment.h"],
    deps = ["@absl//absl/strings:str_format"],
)

cc_test(
    name = "segment_test",
    srcs = ["segement_test.cc"],
    deps = [
        ":segment",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "random_smpling",
    srcs = ["random_sampling.cc"],
    hdrs = ["random_sampling.h"],
    deps = [],
)

cc_test(
    name = "random_sampling_test",
    srcs = ["random_sampling_test.cc"],
    deps = [
        ":random_smpling",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "increasing_triplets",
    srcs = ["increasing_triplets.cc"],
    hdrs = ["increasing_triplets.h"],
    deps = [],
)

cc_test(
    name = "increasing_triplets_test",
    srcs = ["increasing_triplets_test.cc"],
    deps = [
        ":increasing_triplets",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "product_except_self",
    srcs = ["product_except_self.cc"],
    hdrs = ["product_except_self.h"],
    deps = [],
)

cc_test(
    name = "product_except_self_test",
    srcs = ["product_except_self_test.cc"],
    deps = [
        ":product_except_self",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "longest_ones",
    srcs = ["longest_ones.cc"],
    hdrs = ["longest_ones.h"],
    deps = [],
)

cc_test(
    name = "longest_ones_test",
    srcs = ["longest_ones_test.cc"],
    deps = [
        ":longest_ones",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "longest_binary_subarray",
    srcs = ["longest_binary_subarray.cc"],
    hdrs = ["longest_binary_subarray.h"],
    deps = [],
)

cc_test(
    name = "longest_binary_subarray_test",
    srcs = ["longest_binary_subarray_test.cc"],
    deps = [
        ":longest_binary_subarray",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "sparse_dot_product",
    srcs = ["sparse_dot_product.cc"],
    hdrs = ["sparse_dot_product.h"],
    deps = [],
)

cc_test(
    name = "sparse_dot_product_test",
    srcs = ["sparse_dot_product_test.cc"],
    deps = [
        ":sparse_dot_product",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "highest_altitude",
    srcs = ["highest_altitude.cc"],
    hdrs = ["highest_altitude.h"],
    deps = [],
)

cc_test(
    name = "highest_altitude_test",
    srcs = ["highest_altitude_test.cc"],
    deps = [
        ":highest_altitude",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "pivot_index",
    srcs = ["pivot_index.cc"],
    hdrs = ["pivot_index.h"],
    deps = [],
)

cc_test(
    name = "pivot_index_test",
    srcs = ["pivot_index_test.cc"],
    deps = [
        ":pivot_index",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "square_same_order",
    srcs = ["square_same_order.cc"],
    hdrs = ["square_same_order.h"],
    deps = [],
)

cc_test(
    name = "square_same_order_test",
    srcs = ["square_same_order_test.cc"],
    deps = [
        ":square_same_order",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "min_max_pairs",
    srcs = ["max_min_pairs.cc"],
    hdrs = ["max_min_pairs.h"],
    deps = [],
)

cc_test(
    name = "min_max_pairs_test",
    srcs = ["max_min_pairs_test.cc"],
    deps = [
        ":min_max_pairs",
        "@googletest//:gtest_main",
    ],
)
