cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        "@absl//absl/synchronization",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "thread_pool",
    srcs = ["thread_pool.cc"],
    hdrs = ["thread_pool.h"],
    deps = ["@absl//absl/synchronization"],
)

cc_library(
    name = "singleton",
    hdrs = ["singleton.h"],
)

cc_test(
    name = "singleton_test",
    srcs = ["singleton_test.cc"],
    deps = [
        ":singleton",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "thread_pool_main",
    srcs = ["thread_pool_main.cc"],
    deps = [
        ":thread_pool",
        "@gflags",
        "@glog",
    ],
)
