cc_binary(
    name = "inheritance_vs_composition_main",
    srcs = ["inheritance_vs_composition_main.cc"],
    deps = [
        "@gflags",
        "@glog",
    ],
)

cc_binary(
    name = "plugin_factory",
    srcs = ["plugin_factory.cc"],
    deps = [
        "@gflags",
        "@glog",
    ],
)

cc_binary(
    name = "pool_allocator",
    srcs = ["pool_allocator.cc"],
    deps = [
        "@gflags",
        "@glog",
    ],
)
