load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "classic",
    srcs = ["classic.cc"],
    hdrs = ["classic.h"],
    deps = [
        "@absl//absl/container:flat_hash_map",
        "@absl//absl/container:flat_hash_set",
    ],
)

cc_test(
    name = "classic_test",
    srcs = ["classic_test.cc"],
    deps = [
        ":classic",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "maze",
    srcs = ["maze.cc"],
    hdrs = ["maze.h"],
    deps = [],
)

cc_test(
    name = "maze_test",
    srcs = ["maze_test.cc"],
    deps = [
        ":maze",
        "@absl//absl/strings:str_format",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "flip_color",
    srcs = ["flip_color.cc"],
    hdrs = ["flip_color.h"],
    deps = [],
)

cc_test(
    name = "flip_color_test",
    srcs = ["flip_color_test.cc"],
    deps = [
        ":flip_color",
        "@absl//absl/strings:str_format",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "enclosed_regions",
    srcs = ["enclosed_regions.cc"],
    hdrs = ["enclosed_regions.h"],
    deps = [],
)

cc_test(
    name = "enclosed_regions_test",
    srcs = ["enclosed_regions_test.cc"],
    deps = [
        ":enclosed_regions",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "visit_rooms",
    srcs = ["visit_rooms.cc"],
    hdrs = ["visit_rooms.h"],
    deps = [],
)

cc_test(
    name = "visit_rooms_test",
    srcs = ["visit_rooms_test.cc"],
    deps = [
        ":visit_rooms",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "nearest_exit",
    srcs = ["nearest_exit.cc"],
    hdrs = ["nearest_exit.h"],
    deps = [],
)

cc_test(
    name = "nearest_exit_test",
    srcs = ["nearest_exit_test.cc"],
    deps = [
        ":nearest_exit",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "connected_components",
    srcs = ["connected_components.cc"],
    hdrs = ["connected_components.h"],
    deps = [],
)

cc_test(
    name = "connected_components_test",
    srcs = ["connected_components_test.cc"],
    deps = [
        ":connected_components",
        "@googletest//:gtest_main",
    ],
)
