cc_library(
    name = "list_node",
    hdrs = ["list_node.h"],
    deps = [],
    visibility = ["//visibility:public"]
)

cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
            ":list_node",
            "@glog",
            "@gflags",
            "@absl//absl/strings:str_format"
            ],
)