cc_library(
    name = "list_node",
    hdrs = ["list_node.h"],
    visibility = ["//visibility:public"],
    deps = [],
)

cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        ":list_node",
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "has_cycle",
    srcs = ["has_cycle.cc"],
    hdrs = ["has_cycle.h"],
    deps = [":list_node"],
)

cc_test(
    name = "has_cycle_test",
    srcs = ["has_cycle_test.cc"],
    deps = [":has_cycle",
            "@googletest//:gtest_main"],
)
