cc_library(
    name = "list_node",
    hdrs = ["list_node.h"],
    visibility = ["//visibility:public"],
    deps = [],
)

cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        ":list_node",
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "has_cycle",
    srcs = ["has_cycle.cc"],
    hdrs = ["has_cycle.h"],
    deps = [":list_node"],
)

cc_test(
    name = "has_cycle_test",
    srcs = ["has_cycle_test.cc"],
    deps = [
        ":has_cycle",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "reverse_list",
    srcs = ["reverse_list.cc"],
    hdrs = ["reverse_list.h"],
    deps = [":list_node"],
)

cc_test(
    name = "reverse_list_test",
    srcs = ["reverse_list_test.cc"],
    deps = [
        ":reverse_list",
        ":test_util",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "merge_sorted",
    srcs = ["merge_sorted.cc"],
    hdrs = ["merge_sorted.h"],
    deps = [":list_node"],
)

cc_test(
    name = "merge_sorted_test",
    srcs = ["merge_sorted_test.cc"],
    deps = [
        ":merge_sorted",
        ":test_util",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "test_util",
    testonly = 1,
    srcs = ["test_util.cc"],
    hdrs = ["test_util.h"],
    deps = [":list_node"],
)

cc_test(
    name = "test_util_test",
    srcs = ["test_util_test.cc"],
    deps = [
        ":test_util",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "delete_middle",
    srcs = ["delete_middle.cc"],
    hdrs = ["delete_middle.h"],
    deps = [],
)

cc_test(
    name = "delete_middle_test",
    srcs = ["delete_middle_test.cc"],
    deps = [
        ":delete_middle",
        "@googletest//:gtest_main",
    ],
)
