load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "motion_planning",
    srcs = ["motion_planning.cc"],
    hdrs = ["motion_planning.h"],
    deps = [],
)

cc_library(
    name = "will_collide",
    srcs = ["will_collide.cc"],
    hdrs = ["motion_planning.h"],
    deps = [],
)

cc_test(
    name = "motion_planning_test",
    srcs = ["motion_planning_test.cc"],
    deps = [
        ":motion_planning",
        ":will_collide",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "state_machine",
    srcs = ["state_machine.cc"],
    hdrs = ["state_machine.h"],
    deps = [
        "@absl//absl/strings:str_format",
        "@glog",
    ],
)

cc_binary(
    name = "state_machine_main",
    srcs = ["state_machine_main.cc"],
    deps = [
        ":state_machine",
        "@gflags",
        "@glog",
    ],
)
