load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "parity",
    srcs = ["parity.cc"],
    hdrs = ["parity.h"],
    deps = [],
)

cc_test(
    name = "parity_test",
    srcs = ["parity_test.cc"],
    deps = [
        ":parity",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "reverse_digits",
    srcs = ["reverse_digits.cc"],
    hdrs = ["reverse_digits.h"],
    deps = [],
)

cc_test(
    name = "reverse_digits_test",
    srcs = ["reverse_digits_test.cc"],
    deps = [
        ":reverse_digits",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "rectangle",
    hdrs = ["rectangle.h"],
    deps = [
        "@absl//absl/strings:str_format",
        "@absl//absl/types:optional",
    ],
)

cc_test(
    name = "rectangle_test",
    srcs = ["rectangle_test.cc"],
    deps = [
        ":rectangle",
        "@absl//absl/types:optional",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "quantize",
    srcs = ["quantize.cc"],
    hdrs = ["quantize.h"],
    deps = [],
)

cc_test(
    name = "quantize_test",
    srcs = ["quantize_test.cc"],
    deps = [
        ":quantize",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "saturating_add",
    srcs = ["saturating_add.cc"],
    hdrs = ["saturating_add.h"],
    deps = [],
)

cc_test(
    name = "saturating_add_test",
    srcs = ["saturating_add_test.cc"],
    deps = [
        ":saturating_add",
        "@googletest//:gtest_main",
    ],
)
