cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = ["@glog",
            "@gflags"],
)

cc_library(
    name = "permutations",
    srcs = ["permutations.cc"],
    hdrs = ["permutations.h"],
    deps = [],
)

cc_test(
    name = "permutations_test",
    srcs = ["permutations_test.cc"],
    deps = [":permutations",
            "@googletest//:gtest_main"],
)

cc_library(
    name = "power_set",
    srcs = ["power_set.cc"],
    hdrs = ["power_set.h"],
    deps = [],
)

cc_test(
    name = "power_set_test",
    srcs = ["power_set_test.cc"],
    deps = [":power_set",
        "@googletest//:gtest_main"],
)