cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "permutations",
    srcs = ["permutations.cc"],
    hdrs = ["permutations.h"],
    deps = [],
)

cc_test(
    name = "permutations_test",
    srcs = ["permutations_test.cc"],
    deps = [
        ":permutations",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "power_set",
    srcs = ["power_set.cc"],
    hdrs = ["power_set.h"],
    deps = [],
)

cc_test(
    name = "power_set_test",
    srcs = ["power_set_test.cc"],
    deps = [
        ":power_set",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "hanoi",
    srcs = ["hanoi.cc"],
    hdrs = ["hanoi.h"],
    deps = [],
)

cc_test(
    name = "hanoi_test",
    srcs = ["hanoi_test.cc"],
    deps = [
        ":hanoi",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "non_attackcking_queens",
    srcs = ["non_attacking_queens.cc"],
    hdrs = ["non_attacking_queens.h"],
    deps = [],
)

cc_test(
    name = "non_attacking_queens_test",
    srcs = ["non_attacking_queens_test.cc"],
    deps = [
        ":non_attackcking_queens",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "combination_sum",
    srcs = ["combination_sum.cc"],
    hdrs = ["combination_sum.h"],
    deps = [],
)

cc_test(
    name = "combination_sum_test",
    srcs = ["combination_sum_test.cc"],
    deps = [
        ":combination_sum",
        "@googletest//:gtest_main",
    ],
)
